# llm-linux-setup

./: -  .gitignore  AGENTS.md  CLAUDE.md  README.md  install-llm-tools.sh
burr_workflow/: CLAUDE.md  __init__.py  cli.py  protocols.py  pyproject.toml
burr_workflow/actions/: __init__.py  base.py  control.py  file.py  http.py  human.py  iterator.py  llm.py  loop_nodes.py  notify.py  parse.py  registry.py  report.py  script.py  shell.py  state.py
burr_workflow/chunking/: __init__.py  aggregator.py  splitter.py
burr_workflow/config/: __init__.py  settings.py
burr_workflow/core/: __init__.py  adapters.py  compiler.py  errors.py  executor.py  flow_analyzer.py  guardrails.py  hooks.py  llm_config.py  parser.py  types.py  validator.py  visualize.py
burr_workflow/evaluator/: __init__.py  context.py  filters.py  security.py
burr_workflow/guard/: __init__.py  scanner.py  vault.py
burr_workflow/persistence/: __init__.py  audit.py  base.py  sqlite.py
burr_workflow/schemas/: __init__.py  models.py
burr_workflow/skills/workflow-creator/: SKILL.md
burr_workflow/skills/workflow-creator/assets/: workflow-schema.json
burr_workflow/skills/workflow-creator/references/: actions.md  examples.md
burr_workflow/templates/: __init__.py  minimal.yaml
burr_workflow/tests/: __init__.py  test_adapters.py  test_filter_consistency.py  test_vault.py
context/: context  prompt_detection.py
docs/: DESKTOP_INTEGRATION.md  MICROSOFT_MCP_SETUP.md  PROVIDERS.md  REFERENCE.md  TROUBLESHOOTING.md  USAGE.md
espanso-llm/: _manifest.yml  llm-query.py  package.yml
integration/: CLAUDE.md  Prepare-Windows.ps1  llm-assistant  llm-common.sh  llm-integration.bash  llm-integration.zsh  llm-sidechat  llm-terminator-sidechat  system_info.py
integration/claude-statusline/: statusline.sh
integration/llm-zsh-plugin/: README.md  llm.plugin.zsh
integration/llm-zsh-plugin/completions/: _llm
integration/terminator-assistant-plugin/: terminator_assistant.py
integration/terminator-sidechat-plugin/: terminator_sidechat.py
llm-assistant/: CLAUDE.md  Prepare-Windows.ps1  llm-assistant  pyproject.toml
llm-assistant/llm-tools-assistant/: README.md  llm_tools_assistant.py  pyproject.toml
llm-assistant/llm_assistant/: __init__.py  __main__.py  cli.py  completer.py  config.py  context.py  daemon.py  headless_session.py  kb.py  mcp.py  memory.py  prompt_detection.py  rag.py  report.py  schemas.py  session.py  skills.py  speech.py  systemd_service.py  templates.py  terminal.py  ui.py  utils.py  vad.py  voice.py  watch.py  web.py  web_ui_server.py
llm-assistant/llm_assistant/static/: app.js  conversation.html  style.css
llm-assistant/llm_assistant/templates/: help_text.j2  system_prompt.j2  web_companion.html
llm-assistant/llm_assistant/templates/prompts/: report_analysis.j2  safety_evaluation.j2  squash_prompt.j2  voice_clean.j2  watch_prompt.j2
llm-assistant/llm_assistant/workflow/: __init__.py  context.py  llm_client.py  mixin.py
llm-assistant/llm_assistant/workflow/actions/: __init__.py  human_input.py  report_add.py
llm-assistant/terminator-assistant-plugin/: terminator_assistant.py
llm-azure-embeddings/: AZURE_EMBEDDINGS_USAGE.md  README.md  azure-embeddings-models.yaml.example  pyproject.toml
llm-azure-embeddings/llm_azure_embeddings/: __init__.py
llm-guiassistant/: CLAUDE.md  pyproject.toml
llm-guiassistant/config/: swhkdrc.example
llm-guiassistant/llm_guiassistant/: __init__.py  __main__.py  history.py  popup.py
llm-guiassistant/llm_guiassistant/templates/: conversation.html
llm-inlineassistant/: CLAUDE.md  pyproject.toml
llm-inlineassistant/llm_inlineassistant/: __init__.py  __main__.py  cli.py  client.py  context_capture.py  daemon.py  utils.py
llm-inlineassistant/llm_inlineassistant/templates/: __init__.py
llm-shell/: CLAUDE.md
llm-shell/llm_shell/: client.py  context_capture.py  daemon.py
llm-shell/llm_shell/templates/: __init__.py  system_prompt.j2
llm-template/: assistant.yaml  code.yaml  terminator-assistant.yaml  terminator-sidechat.yaml  wut.yaml
llm-templates/: llm-assistant-finding.yaml  llm-assistant.yaml  llm-wut.yaml
llm-tools-assistant/: README.md  llm_tools_assistant.py  pyproject.toml
llm-tools-context/: CLAUDE.md  README.md  llm_tools_context.py  pyproject.toml
llm-tools-context/llm_tools_context/: __init__.py  cli.py  core.py  llm_plugin.py
llm-tools-context/tests/: test_find_cast_file.py  test_llm_tools_context.py
llm-tools-core/: pyproject.toml
llm-tools-core/llm_tools_core/: __init__.py  at_handler.py  console.py  daemon.py  daemon_client.py  errors.py  hashing.py  history.py  linux_context.py  markdown.py  mcp_citations.py  models.py  prompt_detection.py  prompts.py  rag_handler.py  system.py  tokens.py  tool_display.py  tool_execution.py  tui.py  xdg.py
llm-tools-google-search/: __init__.py  llm_tools_google_search.py  pyproject.toml
llm-tools-sidechat/: llm_tools_sidechat.py  pyproject.toml
llm-tools-terminator-fragments/: README.md  pyproject.toml
llm-tools-terminator-fragments/llm_tools_terminator_fragments/: __init__.py
scripts/: context  process-playlist-fabric  transcribe
shared/: common.sh  prompt_detection.py
skills/: .gitignore  external-skills.yaml  update-external-skills.sh
skills/content-transformation/references/: convert_to_markdown.md  create_5_sentence_summary.md  summarize.md  summarize_micro.md  to_flashcards.md  tweet.md  youtube_summary.md
skills/frontend-design/: SKILL.md
skills/image-generation/: SKILL.md
skills/image-generation/references/: prompt-guide.md
skills/learning-education/references/: create_flash_cards.md  create_quiz.md  create_reading_plan.md  create_story_explanation.md  dialog_with_socrates.md  explain_math.md  explain_terms.md
skills/research-intelligence/references/: analyze_claims.md  analyze_paper.md  extract_controversial_ideas.md  extract_ideas.md  extract_references.md  extract_wisdom.md  summarize_paper.md
skills/youtube-transcript/: SKILL.md
ulauncher-llm/: daemon_client.py  helpers.py  main.py  manifest.json  query.py  streaming.py  versions.json
