[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burr_workflow"
version = "0.1.0"
description = "A general-purpose workflow engine built on Burr for YAML-defined workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "llm-linux-setup contributors"}
]
keywords = ["workflow", "automation", "burr", "yaml", "state-machine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "burr[all]>=0.20.0",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
viz = [
    "graphviz>=0.20",
]

[project.scripts]
workflow-validate = "burr_workflow.cli:workflow_validate_cmd"
workflow-schema = "burr_workflow.cli:workflow_schema_cmd"

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-linux-setup"
Repository = "https://github.com/c0ffee0wl/llm-linux-setup"

[tool.setuptools.packages.find]
where = ["."]
include = ["burr_workflow*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
