[project]
name = "llm-assistant"
version = "1.0.0"
description = "Terminal LLM Assistant for Terminator"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "llm>=0.27",
    "llm-tools-core>=1.0.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "PyYAML>=6.0",
    "iso639-lang>=2.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
voice = ["sounddevice", "numpy", "onnx-asr"]
tts = ["google-cloud-texttospeech", "google-auth", "strip-markdown"]
web = ["fastapi", "uvicorn"]
clipboard = ["pyperclip"]
workflow = [
    "burr_workflow @ git+https://github.com/c0ffee0wl/llm-linux-setup#subdirectory=burr_workflow",
    "ruamel.yaml>=0.18.0",
]
all = ["llm-assistant[voice,tts,web,clipboard,workflow]"]

[project.scripts]
llm-assistant = "llm_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["llm_assistant"]

[tool.hatch.build.targets.wheel.force-include]
"llm_assistant/static" = "llm_assistant/static"
