[project]
name = "llm-shell"
version = "1.0.0"
description = "Shell-native AI assistant with conversation continuity"
requires-python = ">=3.10"
dependencies = [
    "llm>=0.27",
    "llm-assistant>=1.0.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
llm-shell = "llm_shell.cli:main"
llm-shell-daemon = "llm_shell.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_shell"]

[tool.hatch.build.targets.wheel.sources]
"llm_shell" = "llm_shell"

[tool.hatch.build]
include = [
    "llm_shell/**/*.py",
    "llm_shell/templates/*.j2",
]
