[project]
name = "llm-inlineassistant"
version = "1.0.0"
description = "Inline AI assistant with daemon architecture for shell and espanso"
requires-python = ">=3.10"
dependencies = [
    "llm>=0.27",
    "llm-assistant>=1.0.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
llm-inlineassistant = "llm_inlineassistant.cli:main"
llm-inlineassistant-daemon = "llm_inlineassistant.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_inlineassistant"]

[tool.hatch.build.targets.wheel.sources]
"llm_inlineassistant" = "llm_inlineassistant"

[tool.hatch.build]
include = [
    "llm_inlineassistant/**/*.py",
    "llm_inlineassistant/templates/*.j2",
]
