[project]
name = "llm-inlineassistant"
version = "1.0.0"
description = "Inline LLM assistant with daemon architecture for shell and espanso"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "llm>=0.27",
    "llm-tools-core>=1.0.0",
    "rich>=13.0",
]

[project.scripts]
llm-inlineassistant = "llm_inlineassistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_inlineassistant"]

[tool.hatch.build.targets.wheel.sources]
"llm_inlineassistant" = "llm_inlineassistant"

[tool.hatch.build]
include = [
    "llm_inlineassistant/**/*.py",
]
