[project]
name = "llm-tools-assistant"
version = "0.1.0"
description = "LLM tools for terminal control in assistant - provides structured tool calling for command execution"
readme = "README.md"
authors = [{name = "c0ffee0wl"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "dbus-python",
    "strip-markdown",
    "pyperclip",
    "fastapi",
    "uvicorn[standard]",
    "prompt_toolkit",
    "sounddevice",
    "numpy",
    "pydub",
    "onnx-asr[hub]",
    "google-cloud-texttospeech",
    "iso639-lang",
]

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-linux-setup"

[project.entry-points.llm]
assistant = "llm_tools_assistant"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
