[project]
name = "llm-tools-context"
version = "0.1.0"
description = "Extract recent shell commands and outputs from asciinema recordings for LLM"
readme = "README.md"
authors = [{name = "c0ffee0wl"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/c0ffee0wl/llm-linux-setup"

[project.entry-points.llm]
context = "llm_tools_context"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
