[project]
name = "llm-tools-terminator-fragments"
version = "0.1.0"
description = "LLM plugin to capture Terminator terminal content as context fragments"
readme = "README.md"
authors = [{name = "c0ffee0wl"}]
license = {text = "GPL-2.0"}
requires-python = ">=3.8"
dependencies = [
    "llm>=0.27",
    "PyGObject>=3.40",
]

[project.entry-points.llm]
terminator_fragments = "llm_tools_terminator_fragments"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
